--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "clean": "rm -rf ./build",
     "compile": "tsc",
     "run-index": "node ./build/index.js",
+    "unittest": "jest --config=jest.config.js --silent",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,7 +22,14 @@
   },
   "homepage": "https://github.com/Shoeman/KFBackEndTest#readme",
   "devDependencies": {
+    "@babel/core": "^7.20.2",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-typescript": "^7.18.6",
+    "@types/jest": "^29.2.2",
     "@types/node": "^18.11.9",
+    "babel-jest": "^29.3.1",
+    "jest": "^29.3.1",
+    "ts-jest": "^29.0.3",
     "typescript": "^4.8.4"
   }
 }
