--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,7 @@
 {
+  "include": ["src/*.ts"],
+  "exclude": ["node_modules", "**/test/ts"],
+
   "compilerOptions": {
     /* Visit https://aka.ms/tsconfig to read more about this file */
 
