--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "clean": "rm -rf ./build",
     "compile": "tsc",
-    "run-index": "node ./build/index.js",
+    "prod": "node ./build/index.js",
+    "dev": "node -r dotenv/config ./build/index.js",
     "unittest": "jest --config=jest.config.js --silent",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -28,6 +29,7 @@
     "@types/jest": "^29.2.2",
     "@types/node": "^18.11.9",
     "babel-jest": "^29.3.1",
+    "dotenv": "^16.0.3",
     "jest": "^29.3.1",
     "ts-jest": "^29.0.3",
     "typescript": "^4.8.4"
