--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "compile": "tsc",
     "prod": "node ./build/index.js",
     "dev": "node -r dotenv/config ./build/index.js",
+    "lint": "node ./node_modules/eslint/bin/eslint.js . --ext .js,.ts --max-warnings=0",
     "unittest": "jest --config=jest.config.js --silent",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npm run lint && npm audit && npm run unittest"
   },
   "repository": {
     "type": "git",
@@ -28,8 +29,11 @@
     "@babel/preset-typescript": "^7.18.6",
     "@types/jest": "^29.2.2",
     "@types/node": "^18.11.9",
+    "@typescript-eslint/eslint-plugin": "^5.42.1",
+    "@typescript-eslint/parser": "^5.42.1",
     "babel-jest": "^29.3.1",
     "dotenv": "^16.0.3",
+    "eslint": "^8.27.0",
     "jest": "^29.3.1",
     "ts-jest": "^29.0.3",
     "typescript": "^4.8.4"
